<?xml version="1.0"?>
<package format="2">
  <name>isee_preprocessing</name>
  <version>0.0.0</version>
  <description>The isee_preprocessing package</description>
  <maintainer email="11930204@mail.sustech.edu.cn">isee</maintainer>
  <license>TODO</license>
  <!--buildtool_depend>roscpp</buildtool_depend-->
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>roscpp</build_depend-->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <!--build_export_depend>roscpp</build_export_depend-->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <!--exec_depend>roscpp</exec_depend-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>
